# RichBooleans

./: Makefile.am  Makefile.in  Makefile.win  README.md  RichBool-10.0.sln  RichBool-10.0.vcxproj  RichBool-7.1.sln  RichBool-7.1.vcproj  RichBool-8.0.sln  RichBool-8.0.vcproj  RichBool-9.0.sln  RichBool-9.0.vcproj  RichBool.cbp  RichBool.dsp  RichBool.dsw  RichBool.workspace  RichBoolDLL.dsp  clean.bat  configure  configure.ac
doc/: ar01s02.html  ar01s03.html  ar01s04.html  ar01s05.html  ar01s06.html  ar01s07.html  ar01s08.html  ar01s09.html  ar01s10.html  ar01s11.html  ar01s12.html  ar01s13.html  ar01s14.html  ar01s15.html  ar01s16.html  ar01s17.html  ar01s18.html  ar01s19.html  ar01s20.html  ar01s21.html  ar01s22.html  ar01s23.html  ar01s24.html  ar01s25.html  ar01s26.html  ar01s27.html  ar01s28.html  changelog.xml  extra.xml  index.html  install.xml  ix01.html  macros.xml  readme.xml  richbool.xml  stringize.xml  style.css
include/: Makefile.am  Makefile.in  README  configure  configure.ac
include/richbool/: analysis.hpp  auto_link.hpp  badblock.hpp  base.hpp  basic_rb.hpp  bind.hpp  bit_iterator.hpp  bool.hpp  config.hpp  containers.hpp  der_analysis.hpp  exceptions.hpp  export.hpp  expression.hpp  fileutils.hpp  finddiff.hpp  findinrange.hpp  functors.hpp  getarg.hpp  getpoints.hpp  getvalue.hpp  logic.hpp  mfcexceptions.hpp  mfcstream.hpp  mfcstring.hpp  mfcstring1.hpp  pair.hpp  portability.hpp  ranges.hpp  regexp.hpp  relation.hpp  richbool.hpp  shared_ptr.hpp  std.hpp  stdexceptions.hpp  stdstring.hpp  string.hpp  swap.hpp  tmpbool.hpp  tostring.hpp  (+6 more)
lib/: dummy.hpp
src/: analysis.cpp  badblock.cpp  bit_iterator.cpp  bool.cpp  der_analysis.cpp  expression.cpp  fileutils.cpp  functors.cpp  mfcexceptions.cpp  mfcstream.cpp  mfcstring.cpp  portability.cpp  ranges.cpp  regexp.cpp  string.cpp  tmpbool.cpp  values.cpp
test/basics/: Makefile.am  Makefile.in  Makefile.win  README  RichBoolTestBasics.cbp  analysis_equal.cpp  bit_iterator.cpp  bitsare_match_test.cpp  bool_test.cpp  end_condition_test.cpp  expression_test.cpp  getarg_test.cpp  getbestpath_test.cpp  logic_test.cpp  relation_test.cpp  richbooltestbasics-10.0.vcxproj  richbooltestbasics-7.1.vcproj  richbooltestbasics-8.0.vcproj  richbooltestbasics-9.0.vcproj  richbooltestbasics.dsp  safecheck.cpp  shared_memory_test.cpp  streamtest.cpp  swap_test.cpp  tmpbool_test.cpp  values_test.cpp  version_test.cpp  wrappertest.cpp
test/common/: composite_expressions.hpp  int_less.hpp  predicates.hpp  rbtest.cpp  rbtest.hpp  resource.h  richbooltest.cpp  string_cmp.hpp  testable_analysis_for_ranges.hpp  testable_analysis_with_strings.hpp
test/macros/: Makefile.am  Makefile.in  Makefile.win  RichBoolTestMacros.cbp  and_test.cpp  argument_hiding.cpp  basictest.cpp  bindtest.cpp  bits_test.cpp  configure  count_calls.hpp  equal_using_less.cpp  evaluate_test.cpp  file-other-rwx.txt  files  files_test.cpp  getarg_test.cpp  getmember_test.cpp  logic_test.cpp  macro_safety.cpp  mfc_test.cpp  notext_test.cpp  or_test.cpp  other_string.hpp  person_test.cpp  pointertest.cpp  regex_test.cpp  richbooltestmacros-10.0.vcxproj  richbooltestmacros-7.1.vcproj  richbooltestmacros-8.0.vcproj  richbooltestmacros-9.0.vcproj  richbooltestmacros.dsp  set-ownership-and-rights  single_arg_test.cpp  std_exceptions_test.cpp  string_locale_test.cpp  string_test.cpp  take-back-files-and-dirs-from-root  test.bat  typeinfo_test.cpp  (+4 more)
test/macros/dir-owner-rwx/dir-root/: dummy.hpp
test/macros/dir-owner-rwx/dir2/: dummy.hpp
test/ranges/: Makefile.am  Makefile.in  Makefile.win  RichBoolTestRanges.cbp  all_test.cpp  all_unique_test.cpp  compare_test.cpp  compare_unordered_test.cpp  configure.ac  container_tostring.cpp  find_in_marked_range.cpp  find_in_multi_marked_range.cpp  find_in_range.cpp  find_ordered_in_range.cpp  has_test.cpp  in_values_test.cpp  inarray_test.cpp  is_multi_subset_of.cpp  is_multi_subset_of_sorted.cpp  is_ordered_subset_of.cpp  is_ordered_subset_of_sorted.cpp  is_subset_of.cpp  is_subset_of_sorted.cpp  log.txt  richbooltestranges-10.0.vcxproj  richbooltestranges-7.1.vcproj  richbooltestranges-8.0.vcproj  richbooltestranges-9.0.vcproj  richbooltestranges.dsp  sort_to_equal.cpp  sorted_test.cpp  stl_test.cpp  stub_container.hpp  stub_container_test.cpp  stub_get_value.hpp  unique_test.cpp  wx_std_test.cpp  wx_test.cpp
