nobase_include_HEADERS = richbool/analysis.hpp richbool/badblock.hpp richbool/bind.hpp richbool/bool.hpp richbool/config.hpp richbool/containers.hpp richbool/der_analysis.hpp richbool/expression.hpp richbool/finddiff.hpp richbool/functors.hpp richbool/getvalue.hpp richbool/pair.hpp richbool/portability.hpp richbool/ranges.hpp richbool/relation.hpp richbool/richbool.hpp richbool/shared_ptr.hpp richbool/std.hpp richbool/stdstring.hpp richbool/string.hpp richbool/tmpbool.hpp richbool/tostring.hpp richbool/wx_iter.hpp richbool/wxstring.hpp richbool/wx.hpp richbool/xcontainers.hpp richbool/basic_rb.hpp richbool/exceptions.hpp richbool/stdexceptions.hpp richbool/auto_link.hpp richbool/base.hpp richbool/getpoints.hpp richbool/version.hpp richbool/logic.hpp richbool/findinrange.hpp richbool/swap.hpp richbool/getarg.hpp richbool/bit_iterator.hpp richbool/values.hpp richbool/fileutils.hpp richbool/export.hpp
